--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+<!--  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtI_hrJ6JPBZm7pxPbQsjUsuh1CZhLcTQ"></script>-->
 </html>
